--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^2.2.31",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
+    "mysql": "^2.14.1",
     "node-xlrd": "^0.2.4",
     "node-xlsx": "^0.11.0",
     "pug": "^2.0.0-rc.3",
