--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-xlsx": "^0.11.0",
     "pug": "^2.0.0-rc.3",
     "serve-favicon": "~2.4.2",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "session-file-store": "^1.1.2"
   }
 }
